--- a/Bluesport-MWG/Views/Store/Detail.cshtml
+++ b/Bluesport-MWG/Views/Store/Detail.cshtml
@@ -2,7 +2,7 @@
 @{ ViewData["Title"] = @Model._store.name; }
 
 <head>
-    <link rel="stylesheet" type="text/css" href="./css/hethong_sieuthi.css">
+    <link rel="stylesheet" type="text/css" href="~/css/hethong_sieuthi.css">
 </head>
 
 
