--- a/Bluesport-MWG/Views/Home/Index.cshtml
+++ b/Bluesport-MWG/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <li><a href="#">XE ĐẠP</a></li>
             <li><a href="#">CHẠY BỘ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @Html.Partial("_PartialFirstProduct", Model.productModels)
     </section>
 </div>
 <!-- / Hot deal PROMO -->
@@ -195,3 +195,55 @@
         </li>
     </ul>
 </div>
+
+<script src="./js/jquery.min.js"></script>
+<script src="./js/owl.carousel.min.js"></script>
+<script src="./js/common.js"></script>
+<script>
+        $(document).ready(function () {
+            $(".listproduct-promo").owlCarousel({
+                items: 4,
+                dots: false,
+                margin: 14,
+                nav: true,
+            });
+            $(".listproduct-block").owlCarousel({
+                items: 5,
+                dots: false,
+                margin: 20,
+                nav: true,
+            });
+            $(".slider-banner").owlCarousel({
+                loop: true,
+                items: 1,
+                dots: true,
+                nav: false,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                autoplayHoverPause: true
+            });
+
+            $(".trademark__list").owlCarousel({
+                items: 6,
+                dots: false,
+                margin: 20,
+                nav: true,
+            });
+            $(".trademark-post").owlCarousel({
+                items: 1,
+                dots: false,
+                nav: true,
+            });
+            $('.visit-checkbox').click(function () {
+                $('.visit-checkbox span').toggleClass('act');
+            });
+
+
+            $('.visit-btn').click(function () {
+                $('.visit__list').toggleClass('open');
+                $(this).toggleClass('act');
+                document.querySelector('.visit-btn span').innerHTML = "XEM THÊM 9 SIÊU THỊ";
+                document.querySelector('.visit-btn.act span').innerHTML = "THU GỌN";
+            });
+        });
+</script>
