--- a/Bluesport-MWG/Views/Home/_PartialProduct.cshtml
+++ b/Bluesport-MWG/Views/Home/_PartialProduct.cshtml
@@ -12,7 +12,7 @@
                             <span class="lb-tragop">Góp 0%</span>
                         </div>
                         <div class="item-img">
-                            <img src="@item.image" alt="@item.name">
+                            <img src="~/@item.image" alt="@item.name">
                         </div>
                     </div>
                     <h3><span>@item.brandName</span> @item.name </h3>
