--- a/Bluesport-MWG/Views/Home/_PartialFirstProduct.cshtml
+++ b/Bluesport-MWG/Views/Home/_PartialFirstProduct.cshtml
@@ -1,10 +1,11 @@
 ﻿@model List<ProductModel>
 
 <div class="listproduct listproduct-promo owl-carousel">
-    @{ foreach (var item in Model)
+    @{ 
+        foreach (var item in Model)
                     {
         <div class="item">
-            <a href="#">
+            <a asp-action="Detail" asp-controller="Product" asp-route-slug="@item.slug">
                 <div class="item-wrap">
                     <div class="item-label">
                         <span class="lb-percent">@item.percentSaleOff</span>
@@ -31,6 +32,8 @@
                     <img src="./images/img-color03.png" alt="test">
                 </a>
             </div>
-        </div> } }
+        </div> 
+        } 
+    }
 
 </div>
