--- a/Bluesport-MWG/Views/Home/Index.cshtml
+++ b/Bluesport-MWG/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HomeViewModel
 @{ ViewData["Title"] = "Trang chủ"; }
 <!-- Banner common -->
-@Html.Partial("_PartialBanner", Model.bannerModels)
+@await Component.InvokeAsync("Banner", new { banners = Model.bannerModels })
 <!-- / Banner common -->
 <!-- Hot deal PROMO -->
 <div class="promo">
@@ -15,7 +15,7 @@
             <li><a href="#">XE ĐẠP</a></li>
             <li><a href="#">CHẠY BỘ</a></li>
         </ul>
-        @Html.Partial("_PartialFirstProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels, whitebg = false })
     </section>
 </div>
 <!-- / Hot deal PROMO -->
@@ -32,7 +32,7 @@
             <li><a href="#">ÁO - QUẦN</a></li>
             <li><a href="#">DỤNG CỤ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels })
         <a href="#" class="c-btn c-btn-white">
             <span>XEM TẤT CẢ GIÀY DÉP NAM</span>
         </a>
@@ -49,7 +49,7 @@
             <li><a href="#">ÁO - QUẦN</a></li>
             <li><a href="#">DỤNG CỤ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels })
         <a href="#" class="c-btn c-btn-white">
             <span>XEM TẤT CẢ ÁO - QUẦN NỮ</span>
         </a>
@@ -66,7 +66,7 @@
             <li><a href="#">ÁO - QUẦN</a></li>
             <li><a href="#">DỤNG CỤ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels })
         <a href="#" class="c-btn c-btn-white">
             <span>XEM TẤT CẢ GIÀY DÉP TRẺ EM</span>
         </a>
@@ -83,7 +83,7 @@
             <li><a href="#">ÁO - QUẦN</a></li>
             <li><a href="#">DỤNG CỤ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels })
         <a href="#" class="c-btn c-btn-white">
             <span>XEM TẤT CẢ XE ĐẠP NỔI BẬT</span>
         </a>
@@ -100,7 +100,7 @@
             <li><a href="#">ÁO - QUẦN</a></li>
             <li><a href="#">DỤNG CỤ</a></li>
         </ul>
-        @Html.Partial("_PartialProduct", Model.productModels)
+        @await Component.InvokeAsync("Product", new { products = Model.productModels })
         <a href="#" class="c-btn c-btn-white">
             <span>XEM TẤT CẢ CÁC CHẠY BỘ</span>
         </a>
@@ -147,7 +147,7 @@
                     <span></span>
                     <p>Tìm siêu thị gần bạn</p>
                 </div>
-                @Html.Partial("_PartialStore", Model.storeModels)
+                @await Component.InvokeAsync("Store", new { stores = Model.storeModels })
                 <a href="javascript:void(0)" class="visit-btn">
                     <span>XEM THÊM 9 SIÊU THỊ</span>
                 </a>
@@ -200,50 +200,50 @@
 <script src="./js/owl.carousel.min.js"></script>
 <script src="./js/common.js"></script>
 <script>
-        $(document).ready(function () {
-            $(".listproduct-promo").owlCarousel({
-                items: 4,
-                dots: false,
-                margin: 14,
-                nav: true,
-            });
-            $(".listproduct-block").owlCarousel({
-                items: 5,
-                dots: false,
-                margin: 20,
-                nav: true,
-            });
-            $(".slider-banner").owlCarousel({
-                loop: true,
-                items: 1,
-                dots: true,
-                nav: false,
-                autoplay: true,
-                autoplayTimeout: 3000,
-                autoplayHoverPause: true
-            });
-
-            $(".trademark__list").owlCarousel({
-                items: 6,
-                dots: false,
-                margin: 20,
-                nav: true,
-            });
-            $(".trademark-post").owlCarousel({
-                items: 1,
-                dots: false,
-                nav: true,
-            });
-            $('.visit-checkbox').click(function () {
-                $('.visit-checkbox span').toggleClass('act');
-            });
-
-
-            $('.visit-btn').click(function () {
-                $('.visit__list').toggleClass('open');
-                $(this).toggleClass('act');
-                document.querySelector('.visit-btn span').innerHTML = "XEM THÊM 9 SIÊU THỊ";
-                document.querySelector('.visit-btn.act span').innerHTML = "THU GỌN";
-            });
+    $(document).ready(function () {
+        $(".listproduct-promo").owlCarousel({
+            items: 4,
+            dots: false,
+            margin: 14,
+            nav: true,
         });
+        $(".listproduct-block").owlCarousel({
+            items: 5,
+            dots: false,
+            margin: 20,
+            nav: true,
+        });
+        $(".slider-banner").owlCarousel({
+            loop: true,
+            items: 1,
+            dots: true,
+            nav: false,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: true
+        });
+
+        $(".trademark__list").owlCarousel({
+            items: 6,
+            dots: false,
+            margin: 20,
+            nav: true,
+        });
+        $(".trademark-post").owlCarousel({
+            items: 1,
+            dots: false,
+            nav: true,
+        });
+        $('.visit-checkbox').click(function () {
+            $('.visit-checkbox span').toggleClass('act');
+        });
+
+
+        $('.visit-btn').click(function () {
+            $('.visit__list').toggleClass('open');
+            $(this).toggleClass('act');
+            document.querySelector('.visit-btn span').innerHTML = "XEM THÊM 9 SIÊU THỊ";
+            document.querySelector('.visit-btn.act span').innerHTML = "THU GỌN";
+        });
+    });
 </script>
