--- a/Bluesport-MWG/Views/Home/Index.cshtml
+++ b/Bluesport-MWG/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <li><a href="#">XE ĐẠP</a></li>
             <li><a href="#">CHẠY BỘ</a></li>
         </ul>
-        @await Component.InvokeAsync("Product", new { products = Model.productModels, whitebg = false })
+        @await Component.InvokeAsync("Product", new { products = Model.productModels, isPromo = true })
     </section>
 </div>
 <!-- / Hot deal PROMO -->
@@ -156,45 +156,7 @@
     </section>
 </div>
 
-<div class="commitment">
-    <ul>
-        <li>
-            <div class="li-icon">
-                <i class="icon-chinhhang"></i>
-            </div>
-            <div class="li-content">
-                <p class="txt-ttl">Chính hãng 100%</p>
-                <p class="txt-ct">Hơn 100 thương hiệu nổi tiếng</p>
-            </div>
-        </li>
-        <li>
-            <div class="li-icon">
-                <i class="icon-mpgiaohang"></i>
-            </div>
-            <div class="li-content">
-                <p class="txt-ttl">Miễn phí giao hàng</p>
-                <p class="txt-ct">Cho đơn hàng trên 500.000đ</p>
-            </div>
-        </li>
-        <li>
-            <div class="li-icon">
-                <i class="icon-doi1"></i>
-            </div>
-            <div class="li-content">
-                <p class="txt-ttl">1 đổi 1 trong vòng 1 năm</p>
-                <p class="txt-ct">Tại 200 cửa hàng trên toàn quốc</p>
-                <a href="#" class="txt-link">xem chi tiết</a>
-            </div>
-        </li>
-        <li>
-            <div class="li-icon">0%</div>
-            <div class="li-content">
-                <p class="txt-ttl">Trả góp 0%</p>
-                <p class="txt-ct">Qua thẻ hoặc duyệt hồ sơ<br>với mọi sản phẩm trên 1.5 triệu</p>
-            </div>
-        </li>
-    </ul>
-</div>
+@Html.Partial("_PartialCommitment")
 
 <script src="./js/jquery.min.js"></script>
 <script src="./js/owl.carousel.min.js"></script>
